@@ -4,6 +4,7 @@ v0.10.0
 * [BGBUILD-318] Add support for us-west-2 region
 * [BGBUILD-308] Clearer error message when unrecognised file extension is used
 * [BGBUILD-322] Allow selection of kernel and ramdisk for ec2 and ebs plugins
+* [BGBUILD-302] Add support for VirtualPC platform
 
 v0.9.8
 
